詳細資訊版面調整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
         <item>4hr</item>
         <item>6hr</item>
         <item>8hr</item>
+        <item>12hr</item>
         <item>1day</item>
         <item>2days</item>
         <item>3days</item>
